--- a/app/templates/app/detail.html
+++ b/app/templates/app/detail.html
@@ -39,71 +39,146 @@
         <div class="row">
             <div class="col-md-12">
                 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                    
-                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                        <span class="navbar-toggler-icon"></span>
-                    </button> <a class="navbar-brand" href="https://amonguschat.herokuapp.com"><img src="{% static 'logo.png' %}" alt="among us chat logo" style="width:50%;"></a>
-                    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                        <ul class="navbar-nav">
-                            <li class="nav-item active">
-                                <a class="nav-link" href="#" style="font-family: Courier;">Home</a>
-                            </li>
-                            <li class="nav-item active">
-                                <a class="nav-link" href="#" style="font-family: Courier;">About</a>
-                            </li>
-                            <li class="nav-item dropdown active">
-                                <a class="nav-link dropdown-toggle" href="http://example.com" id="navbarDropdownMenuLink" data-toggle="dropdown" style="font-family: Courier;">Community</a>
-                                <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                                    <a class="dropdown-item" href="#" style="font-family: Courier;">Action</a> <a class="dropdown-item" href="#" style="font-family: Courier;">Another action</a> <a class="dropdown-item" href="#" style="font-family: Courier;">Something else here</a>
-                                    <div class="dropdown-divider">
-                                    </div> <a class="dropdown-item" href="#" style="font-family: Courier;">Separated link</a>
-                                </div>
-                            </li>
-                        </ul>
-                        <form class="form-inline">
-                            <input class="form-control mr-sm-2" type="text" /> 
-                            <button class="btn btn-primary my-2 my-sm-0" type="submit" style="font-family: Courier;">
-                                Search
-                            </button>
-                        </form>
-                        <ul class="navbar-nav ml-md-auto">
-                            <li class="nav-item active">
-                                <a class="nav-link" href="#" style="font-family: Courier;">FAQ <span class="sr-only">(current)</span></a>
-                            </li>
-                            <li class="nav-item dropdown active">
-                                <a class="nav-link dropdown-toggle" href="http://example.com" id="navbarDropdownMenuLink" data-toggle="dropdown" style="font-family: Courier;">Support</a>
-                                <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
-                                    <a class="dropdown-item" href="#" style="font-family: Courier;">Direct Contact</a> <a class="dropdown-item" href="#" style="font-family: Courier;">Collaborate</a> <a class="dropdown-item" href="#" style="font-family: Courier;">Sponsor Us</a>
-                                    <div class="dropdown-divider">
-                                    </div> <a class="dropdown-item" href="#" style="color:red;font-family: Courier;">Report</a>
-                                </div>
-                            </li>
-                        </ul>
-                    </div>
+                
+                        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                            <span class="navbar-toggler-icon"></span>
+                        </button> <a class="navbar-brand" href="https://amonguschat.herokuapp.com"><img src="{% static 'logo.png' %}" alt="among us chat logo" style="width:50%;"></a>
+                        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                            <ul class="navbar-nav">
+                                <li class="nav-item active">
+                                    <a class="nav-link" href="{% url 'ind' %}" style="font-family: Courier;">Home</a>
+                                </li>
+                                <li class="nav-item active">
+                                    <a class="nav-link" href="{% url 'about' %}" style="font-family: Courier;">About</a>
+                                </li>
+                                <li class="nav-item dropdown active">
+                                    <a class="nav-link dropdown-toggle" href="" id="navbarDropdownMenuLink" data-toggle="dropdown" style="font-family: Courier;">Community</a>
+                                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                                        <a class="dropdown-item" href="{% url 'donate' %}" style="font-family: Courier;">Donate</a> 
+                                        <a class="dropdown-item" href="{% url 'servers' %}" style="font-family: Courier;">Servers</a> 
+                                        <a class="dropdown-item" href="{% url 'affiliate' %}" style="font-family: Courier;">Affiliate Links</a>
+                                        <div class="dropdown-divider">
+                                        </div> <a class="dropdown-item" href="{% url 'sponsors' %}" style="font-family: Courier;">Sponsors</a>
+                                    </div>
+                                </li>
+                            </ul>
+                            <!-- <form class="form-inline">
+                                <input class="form-control mr-sm-2" type="text" /> 
+                                <button class="btn btn-primary my-2 my-sm-0" type="submit" style="font-family: Courier;">
+                                    Search
+                                </button>
+                            </form> -->
+                            <ul class="navbar-nav ml-md-auto">
+                                <li class="nav-item active">
+                                    <a class="nav-link" href="{% url 'faq' %}" style="font-family: Courier;">FAQ <span class="sr-only">(current)</span></a>
+                                </li>
+                                <li class="nav-item dropdown active">
+                                    <a class="nav-link dropdown-toggle" href="" id="navbarDropdownMenuLink" data-toggle="dropdown" style="font-family: Courier;">Support</a>
+                                    <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
+                                        <a class="dropdown-item" href="{% url 'contact' %}" style="font-family: Courier;">Direct Contact</a> 
+                                        <a class="dropdown-item" href="{% url 'collaborate' %}" style="font-family: Courier;">Collaborate</a> 
+                                        <a class="dropdown-item" href="{% url 'sponsor' %}" style="font-family: Courier;">Sponsor Us</a>
+                                        <div class="dropdown-divider">
+                                        </div> <a class="dropdown-item" href="mailto:welcome.amongus@gmail.com?subject=Report" style="color:red;font-family: Courier; text-decoration: none;">Report</a>
+                                    </div>
+                                </li>
+                            </ul>
+                        </div>
                 </nav>
-                <div class="jumbotron">
-                    <h2 style="font-family: Courier;">
-                        Hello, fellow gamers!
+                <div class="jumbotron" style="background-color:#659DBD; margin-left: 25%; margin-right: 25%;">
+                    <h2 style="font-family: Courier; text-align: center;">
+                        Game: {{ game.game_name }}
                     </h2>
-                    <p style="font-family: Courier;">
-                        This site was created by Among Us players, for Among Us players. Come join us and we will rule out the Imposters together :)
+                    <p style="font-family: Courier;text-align: center;">
+                        Here you can chat about this game, or just anything in general :)
                     </p>
                     <!-- <small>Current active users: {{ countt }}</small> -->
                     <p>
-                        <a class="btn btn-primary btn-large" href="#" style="font-family: Courier;">Learn more</a>
+                        <!-- <a class="btn btn-primary btn-large" href="#" style="font-family: Courier;">Learn more</a> -->
                         <form method="POST" action="{% url 'forumm' %}">
                             {% csrf_token %}
-                        <button class="btn btn-success" style="width:fit-content; padding: 4px; margin:10px;font-family: Courier;"> Add a game </button>
+                        <button class="btn btn-success" style="width:fit-content; padding: 4px; font-family: Courier;margin-left: 35%;"> Post your own game </button>
                         </form>
                     </p>
                 </div>
-                <h1>Title: {{ book.title }}</h1>
+                <div class="row">
+                    <div class="column left">
+                        <div id="app">
+                            <a href="{% url 'sponsor' %}" style="text-decoration: none;">
+                            <div class="shield has-text-black-ter" v-html="selected">
+                                Your ad can be here
+                            </div>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="column middle">
+                        <h3><strong>Game Name:</strong> {{ game.game_name }}</h3>
+                        <p><strong>Game Code: {{ game.code }} </strong></p>
+                        <p><strong>Posted on:</strong> {{ game.date_created }}</p>
+                        <br><br>
+                        <!-- <div class="row">
+                                <div class="col-md-3">
+                                </div>
+                                <div class="col-md-6">
+                                    <h2>
+                                        General Chat (Anonymous)
+                                    </h2>
+                                    {% for discuss in discussios %}
+                                        
+                                    {% endfor %}
+                                    <form method="POST" action="{% url 'discussionn' %}">
+                                        {% csrf_token %}
+                                    <button class="btn btn-success" style="width:fit-content; padding: 4px; margin:10px;">Add comment</button>
+                                    </form>
+                                    <p>
+                                        <a class="btn" href="#">View details »</a>
+                                    </p>
+                                </div>
+                                <div class="col-md-3">
+                                </div>
+                        </div> -->
+                        <form method="POST" action="{% url 'forumm' %}">
+                                {% csrf_token %}
+                            <button class="btn btn-success" style="width:fit-content; padding: 4px; font-family: Courier;margin-left: 27%;"> Post your own game </button>
+                        </form>
+                    </div>
+                    <div class="column right">
+                        
+                    </div>
+                </div>
+                <style>
+                .column {
+                    float: left;
+                    padding: 10px;
+                }
+                .left, .right {
+                    width: 25%;
+                }
+                .middle {
+                    margin-left: 5%;
+                    width: 50%;
+                    margin-bottom: 15%;
+                }
+                .shield {
+                    font-size: 1.5rem;
+                    margin: 0 auto;
+                    padding: 1.5rem;
+                    background-color: #ffc128;
+                    text-align: center;
+                    font-weight: 800;
+                    border: 15px solid #010000;
+                    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+                        "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+                        sans-serif;
+                    border-radius: 25px;
+                }
+                /* @media screen and (min-width: 768px) {
+                    font-size: 2.5rem;
+                    max-width: 400px;
+                    padding: 2rem;
+                } */
 
-                <p><strong>Game Name:</strong>{{ book.author }}</p>
-                <p><strong>Summary:</strong> {{ book.summary }}</p>
-                <p><strong>ISBN:</strong> {{ book.isbn }}</p> 
-                <p><strong>Language:</strong> {{ book.language }}</p>  
-                <p><strong>Genre:</strong> {{ book.genre.all|join:", " }}</p>  
+                </style>  
             </div>
         </div>
     </div>
