--- a/app/templates/app/contact.html
+++ b/app/templates/app/contact.html
@@ -9,6 +9,11 @@
     <link rel="icon" href="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/240/apple/237/alien-monster_1f47e.png">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <!-- Global site tag (gtag.js) - Google Analytics -->
+    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet" type="text/css">
+    <script src='https://kit.fontawesome.com/a076d05399.js'></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>   
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-180175294-1"></script>
     <script>
     window.dataLayer = window.dataLayer || [];
@@ -71,7 +76,7 @@
                         </nav>
                         <div class="jumbotron">
                             <h2 style="font-family: Courier;">
-                                To get into direct contact with us, shoot us an email at <a href="mailto:welcome.amongus@gmail.com?subject=Hi!" style="color:green;font-family: Courier; text-decoration: none;">welcome.amongus@gmail.com</a>
+                                To get into direct contact with us, shoot us an email at <a href="mailto:welcome.amongus@gmail.com?subject=Hi!" style="color:green;font-family: Courier; text-decoration: none;">welcome.amongus@gmail.com</a> or simply fill out the form below.
                             </h2>
                             <!-- <p style="font-family: Courier;">
                                 This site was created by Among Us players, for Among Us players. Come join us and we will rule out the Imposters together :)
@@ -79,15 +84,178 @@
                             <!-- <small>Current active users: {{ countt }}</small> -->
                             
                         </div>
-                        <!-- <style>
-                        .mainone {
-                            
-                        }
-                        </style> -->
+                        <br><br>
+                        <div id="contact" class="container-fluid bg-grey" style="border: 12px solid; padding: 5px;">
+                                <h2 class="text-center">CONTACT</h2>
+                                <div class="row">
+                                  <div class="col-sm-5">
+                                    <p>Contact us and we'll get back to you as soon as possible.</p>
+                                    <p><i class='fas fa-map-marker-alt'></i> Planet Earth 🌍</p>
+                                    <!-- <p><span class="glyphicon glyphicon-phone"></span> +00 1515151515</p> -->
+                                    <p><i class="fas fa-envelope"></i><a href="mailto:welcome.amongus@gmail.com?subject=Hi there!" style="text-decoration: none;"> welcome.amongus@gmail.com</a></p>
+                                  </div>
+                                  <div class="col-sm-7 slideanim">
+                                  <form class="" action="{% url 'contact' %}" method="post">
+                                      {% csrf_token %}
+                                    <div class="row">
+                                      <div class="col-sm-6 form-group">
+                                        <input class="form-control" id="name" name="name" placeholder="Name" type="text" required>
+                                      </div>
+                                      <div class="col-sm-6 form-group">
+                                        <input class="form-control" id="email" name="email" placeholder="Email" type="email" required>
+                                      </div>
+                                    </div>
+                                    <textarea class="form-control" id="comments" name="message" placeholder="Comment" rows="5" required></textarea><br>
+                                    <div class="row">
+                                      <div class="col-sm-12 form-group">
+                                        <button class="btn pull-right" style="border: 2px solid;" type="submit">Send</button>
+                                      </div>
+                                    </div>
+                                  </form>
+                                  </div>
+                                </div>
+                              </div>
                     </div>
                 </div>
                 <br><br>
             </div>
+            <style>
+            ::selection {
+        color: red;
+        background: yellow;
+    }
+    * {
+        font-family: Courier;
+    }
+    body {
+        font: 400 15px Lato, sans-serif;
+        font-family: Courier;
+        line-height: 1.8;
+        color: #818181;
+    }
+    h2 {
+        font-size: 24px;
+        text-transform: uppercase;
+        color: #303030;
+        font-weight: 600;
+        margin-bottom: 30px;
+    }
+    /* h4 {
+        font-size: 19px;
+        line-height: 1.375em;
+        color: #303030;
+        font-weight: 400;
+        margin-bottom: 30px;
+    }   */
+    .jumbotron {
+        background-color: #f4511e;
+        color: #fff;
+        /* padding: 100px 25px; */
+        font-family: Montserrat, sans-serif;
+    }
+    /* .container-fluid {
+        padding: 60px 50px;
+    } */
+    .bg-grey {
+        background-color: #f6f6f6;
+    }
+    /* .logo-small {
+        color: #f4511e;
+        font-size: 50px;
+    }
+    .logo {
+        color: #f4511e;
+        font-size: 200px;
+    }
+    .thumbnail {
+        padding: 0 0 15px 0;
+        border: none;
+        border-radius: 0;
+    }
+    .thumbnail img {
+        width: 100%;
+        height: 100%;
+        margin-bottom: 10px;
+    } */
+    /* .carousel-control.right, .carousel-control.left {
+        background-image: none;
+        color: #f4511e;
+    }
+    .carousel-indicators li {
+        border-color: #f4511e;
+    }
+    .carousel-indicators li.active {
+        background-color: #f4511e;
+    }
+    .item h4 {
+        font-size: 19px;
+        line-height: 1.375em;
+        font-weight: 400;
+        font-style: italic;
+        margin: 70px 0;
+    }
+    .item span {
+        font-style: normal;
+    }
+    .panel {
+        border: 1px solid #f4511e; 
+        border-radius:0 !important;
+        transition: box-shadow 0.5s;
+    }
+    .panel:hover {
+        box-shadow: 5px 0px 40px rgba(0,0,0, .2);
+    }
+    .panel-footer .btn:hover {
+        border: 1px solid #f4511e;
+        background-color: #fff !important;
+        color: #f4511e;
+    }
+    .panel-heading {
+        color: #fff !important;
+        background-color: #f4511e !important;
+        padding: 25px;
+        border-bottom: 1px solid transparent;
+        border-top-left-radius: 0px;
+        border-top-right-radius: 0px;
+        border-bottom-left-radius: 0px;
+        border-bottom-right-radius: 0px;
+    } */
+    /* .panel-footer {
+        background-color: white !important;
+    }
+    .panel-footer h3 {
+        font-size: 32px;
+    }
+    .panel-footer h4 {
+        color: #aaa;
+        font-size: 14px;
+    }
+    .panel-footer .btn {
+        margin: 15px 0;
+        background-color: #f4511e;
+        color: #fff;
+    }
+    footer .glyphicon {
+        font-size: 20px;
+        margin-bottom: 20px;
+        color: #f4511e;
+    } */
+    /* @media screen and (max-width: 768px) {
+        .col-sm-4 {
+        text-align: center;
+        margin: 25px 0;
+        }
+        .btn-lg {
+            width: 100%;
+            margin-bottom: 35px;
+        }
+    }
+    @media screen and (max-width: 480px) {
+        .logo {
+        font-size: 150px;
+        }
+    } */
+            </style>
             <footer class="container-fluid text-center" style="margin-top:15%;">
                 </a>
                 <p>Made with ❤️ <a href="https://amonguschat.herokuapp.com/" target="_blank" title="Among Us Chat Online" style="text-decoration: none;">among us chat ©</a></p>
